fix(fuselage): `OptionInput` margins and alignment (#1161)

--- a/packages/fuselage/src/components/Option/Option.styles.scss
+++ b/packages/fuselage/src/components/Option/Option.styles.scss
@@ -104,11 +104,12 @@ $variants: (
   &__input {
     display: flex;
 
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 
     min-width: lengths.size(20);
     min-height: lengths.size(20);
+    margin-inline-start: lengths.margin(16);
     margin-inline-end: lengths.margin(-12);
   }
 
